# ScrapingUPF

./: .gitignore  CODE_OF_CONDUCT.md  Clean.sh  CleanCompilation.sh  Configuration.py  CoreRequirements.txt  DeveloperRequirements.txt  GoogleCalendar.py  GraphicRequirements.txt  Imports.py  LICENSE  Main.py  NetworkRequests.py  README.md  Requirements.txt  ScheduleBlocks.py  UserPreferences.ini  pyproject.toml  setup.cfg  setup.py  toPython.sh  token.pickle
doc/: Application Diagram  Documentation.odt  Folders Structure
key/: credentials.json
res/GUI/: Credits  InformationWindow.py  InformationWindow.ui  MainWindow.ui
shc/: CleanCompilation.sh  toPython.sh
shell/: Clean.sh
src/: Application.py  Configuration.py  Constants.py  GoogleCalendar.py  Imports.py  InformationWindow.py  InformationWindowNew.py  Main.py  MainWindow.py  MainWindowNew.py  NetworkRequests.py  PyQt5_Imports.py  QtPalette.py  ScheduleBlocks.py  __init__.py
