[metadata]
name = scrapingUPF
version = 0.0.1
author = Sklyvan
author_email = joan.gracia01@estudiant.upf.edu
description = Aplicación que nos permite transferir los horarios de la página web de upf.edu a Google Calendar.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sklyvan/ScrapingUPF
project_urls =
    Bug Tracker = https://github.com/Sklyvan/ScrapingUPF/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src